--- a/misc/custom_metrics_global.yaml
+++ b/misc/custom_metrics_global.yaml
@@ -7,4 +7,6 @@ metadata:
   namespace: keptn
 data:
   custom-queries: |
-    throughput: "com.dynatrace.builtin:foo.bar,avg,0"
+    throughput: "com.dynatrace.builtin:service.requestspermin,count,0"
+    errorCount4xx: "com.dynatrace.builtin:service.errorcounthttp4xx,,0"
+    errorCount5xx: "com.dynatrace.builtin:service.errorcounthttp5xx,,0"
