#1105 move to new metrics api

--- a/misc/dynatrace-credentials.yaml
+++ b/misc/dynatrace-credentials.yaml
@@ -1,5 +1,5 @@
 # add for project "sockshop" using
 # kubectl create secret generic dynatrace-credentials-sockshop -n "keptn" --from-file=dynatrace-credentials=dynatrace-credentials.yaml
 
-tenant: your-environment-id.live.dynatrace.com
-apiToken: XYZ123987ABC
+DT_TENANT: your-environment-id.live.dynatrace.com
+DT_API_TOKEN: XYZ123987ABC
