--- a/misc/custom_metrics_global.yaml
+++ b/misc/custom_metrics_global.yaml
@@ -7,11 +7,11 @@ metadata:
   namespace: keptn
 data:
   custom-queries: |
-    throughput: "builtin:service.requestCount.total:merge(0):count?scope=entity($ENTITYNAME),tag(environment:$PROJECT-$STAGE),tag(service:$SERVICE),tag($ADDITIONALTAGS)"
-    error_rate: "builtin:service.errors.total.count:merge(0):avg?scope=tag(environment:$PROJECT-$STAGE),tag(service:$SERVICE),tag($ADDITIONALTAGS)"
-    response_time_p50: "builtin:service.response.time:merge(0):percentile(50)?scope=tag(service:$SERVICE),tag(environment:$PROJECT-$STAGE),tag($ADDITIONALTAGS)"
-    response_time_p90: "builtin:service.response.time:merge(0):percentile(50)?scope=tag(service:$SERVICE),tag(environment:$PROJECT-$STAGE),tag($ADDITIONALTAGS)"
-    response_time_p95: "builtin:service.response.time:merge(0):percentile(50)?scope=tag(service:$SERVICE),tag(environment:$PROJECT-$STAGE),tag($ADDITIONALTAGS)"
+    throughput: "builtin:service.requestCount.total:merge(0):count?scope=tag(environment:$PROJECT-$STAGE),tag(service:$SERVICE)"
+    error_rate: "builtin:service.errors.total.count:merge(0):avg?scope=tag(environment:$PROJECT-$STAGE),tag(service:$SERVICE)"
+    response_time_p50: "builtin:service.response.time:merge(0):percentile(50)?scope=tag(service:$SERVICE),tag(environment:$PROJECT-$STAGE)"
+    response_time_p90: "builtin:service.response.time:merge(0):percentile(50)?scope=tag(service:$SERVICE),tag(environment:$PROJECT-$STAGE)"
+    response_time_p95: "builtin:service.response.time:merge(0):percentile(50)?scope=tag(service:$SERVICE),tag(environment:$PROJECT-$STAGE)"
 
 
 
