#1105 fix docs and added a sleep statement such that we wait for dynatrace to catch up

--- a/misc/custom_metrics_project.yaml
+++ b/misc/custom_metrics_project.yaml
@@ -7,4 +7,4 @@ metadata:
   namespace: keptn
 data:
   custom-queries: |
-    response_time_P50: "com.dynatrace.builtin:service.responsetime,avg,0"
+    foo_bar: "custom.metric:merge(0):percentile(50)?scope=tag(my-service:$SERVICE),tag(my-environment:$PROJECT-$STAGE)"
