--- a/.travis.yml
+++ b/.travis.yml
@@ -102,17 +102,17 @@ jobs:
       # build docker images for release branches
       if: branch =~ ^release.*$ AND NOT type = pull_request
       script:
-        # remove release- form branch name
+        # remove release- form branch name and overwrite the VERSION based on the branch name
+        - echo $GIT_BRANCH_NAME
         - export VERSION=${GIT_BRANCH_NAME#"release-"}
-        - echo $TRAVIS_BUILD_STAGE_NAME
+        - echo $TRAVIS_BUILD_STAGE_NAME - $VERSION
         - docker build . -t "${IMAGE}:${GIT_SHA}"
         - docker tag "${IMAGE}:${GIT_SHA}" "${IMAGE}:${VERSION}.${DATE}"
         - docker tag "${IMAGE}:${GIT_SHA}" "${IMAGE}:${VERSION}.latest"
       after_success:
         - echo "$REGISTRY_PASSWORD" | docker login --username $REGISTRY_USER --password-stdin
-        - docker push "${IMAGE}:${GIT_SHA}"
-        - docker push "${IMAGE}:${VERSION}.${DATE}"
-        - docker push "${IMAGE}:${VERSION}.latest"
+        - docker images
+        - docker push "${IMAGE}"
 
     - stage: tags
       # build docker images for tags
