Update travis pipeline

--- a/.travis.yml
+++ b/.travis.yml
@@ -78,7 +78,7 @@ jobs:
         - echo $TRAVIS_BUILD_STAGE_NAME
         - TYPE="$(echo $TRAVIS_BRANCH | cut -d'/' -f1)"
         - NUMBER="$(echo $TRAVIS_BRANCH | cut -d'/' -f2)"
-        - docker build . -t "${IMAGE}:${GIT_SHA}"
+        - docker build . -t "${IMAGE}:${GIT_SHA}" || travis_terminate -1
         - docker tag "${IMAGE}:${GIT_SHA}" "${IMAGE}:${TYPE}.${NUMBER}.${DATE}"
       after_success:
        - echo "$REGISTRY_PASSWORD" | docker login --username $REGISTRY_USER --password-stdin
@@ -86,12 +86,12 @@ jobs:
        - docker push "${IMAGE}:${TYPE}.${NUMBER}.${DATE}"
 
 
-    - stage: develop
-      # build docker images for develop branch
-      if: branch = develop AND NOT type = pull_request
+    - stage: master/develop
+      # build docker images for master/develop branch
+      if: (branch = develop or branch = master) AND NOT type = pull_request
       script:
         - echo $TRAVIS_BUILD_STAGE_NAME
-        - docker build . -t "${IMAGE}:${GIT_SHA}"
+        - docker build . -t "${IMAGE}:${GIT_SHA}" || travis_terminate -1
         - docker tag "${IMAGE}:${GIT_SHA}" "${IMAGE}:${DATE}"
         - docker tag "${IMAGE}:${GIT_SHA}" "${IMAGE}:latest"
       after_success:
@@ -108,22 +108,10 @@ jobs:
         - echo $BRANCH
         - export VERSION=${BRANCH#"release-"}
         - echo $TRAVIS_BUILD_STAGE_NAME - $VERSION
-        - docker build . -t "${IMAGE}:${GIT_SHA}"
+        - docker build . -t "${IMAGE}:${GIT_SHA}" || travis_terminate -1
         - docker tag "${IMAGE}:${GIT_SHA}" "${IMAGE}:${VERSION}.${DATE}"
         - docker tag "${IMAGE}:${GIT_SHA}" "${IMAGE}:${VERSION}.latest"
       after_success:
         - echo "$REGISTRY_PASSWORD" | docker login --username $REGISTRY_USER --password-stdin
         - docker images
         - docker push "${IMAGE}"
-
-    - stage: tags
-      # build docker images for tags
-      if: tag IS present
-      script:
-        - echo $TRAVIS_TAG
-        - export VERSION=$TRAVIS_TAG
-        - echo $TRAVIS_BUILD_STAGE_NAME - $VERSION
-        - docker build . -t "${IMAGE}:${VERSION}"
-      after_success:
-        - echo "$REGISTRY_PASSWORD" | docker login --username $REGISTRY_USER --password-stdin
-        - docker push "${IMAGE}:${VERSION}"
