#1192 Add spec version to custom queries file

--- a/misc/custom_metrics_global.yaml
+++ b/misc/custom_metrics_global.yaml
@@ -1,4 +1,5 @@
-# add using: kubectl apply -f custom_metrics_global.yaml
+# add using:
+# kubectl apply -f custom_metrics_global.yaml
 
 kind: ConfigMap
 apiVersion: v1
