--- a/misc/dynatrace-credentials.yaml
+++ b/misc/dynatrace-credentials.yaml
@@ -1,4 +1,4 @@
-# add for project "sockshop" using
+# add for project "sockshop" using:
 # kubectl create secret generic dynatrace-credentials-sockshop -n "keptn" --from-file=dynatrace-credentials=dynatrace-credentials.yaml
 
 DT_TENANT: your-environment-id.live.dynatrace.com
