--- a/deploy/service.yaml
+++ b/deploy/service.yaml
@@ -65,7 +65,7 @@ spec:
     spec:
       containers:
         - name: distributor
-          image: keptn/distributor:0.6.0
+          image: keptn/distributor:latest
           ports:
             - containerPort: 8080
           resources:
