--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,28 @@
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Test binary, build with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
 .vscode
 
 .idea/*
 # allow shared run configurations
 !.idea/runConfigurations/
+
+# local files
+_*
+
+# binaries (created by go build on Linux/OSX)
+main
+dynatrace-sli-service
 
 vendor
 
