--- a/deploy/service.yaml
+++ b/deploy/service.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: dynatrace-sli-service
-          image: keptncontrib/dynatrace-sli-service:latest
+          image: keptncontrib/dynatrace-sli-service:0.4.0
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
@@ -65,7 +65,7 @@ spec:
     spec:
       containers:
         - name: distributor
-          image: keptn/distributor:latest
+          image: keptn/distributor:0.6.2
           ports:
             - containerPort: 8080
           resources:
