--- a/deploy/service.yaml
+++ b/deploy/service.yaml
@@ -1,4 +1,44 @@
 ---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: keptn-dynatrace-sli-service
+  namespace: keptn
+  labels:
+    "app": "keptn"
+
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: keptn-dynatrace-sli-service-secrets
+  namespace: keptn
+  labels:
+    "app": "keptn"
+rules:
+  - apiGroups:
+      - ""
+    resources:
+      - secrets
+    verbs:
+      - get
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: keptn-dynatrace-sli-service-secrets
+  namespace: keptn
+  labels:
+    "app": "keptn"
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: keptn-dynatrace-sli-service-secrets
+subjects:
+  - kind: ServiceAccount
+    name: keptn-dynatrace-sli-service
+    namespace: keptn
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -14,6 +54,7 @@ spec:
       labels:
         run: dynatrace-sli-service
     spec:
+      serviceAccountName: keptn-dynatrace-sli-service
       containers:
         - name: dynatrace-sli-service
           image: keptn/dynatrace-sli-service:latest
