--- a/slo.yaml
+++ b/slo.yaml
@@ -1,129 +1,458 @@
 {
   "spec_version": "",
   "filter": null,
-  "comparison": null,
+  "comparison": {
+    "compare_with": "single_result",
+    "include_result_with_score": "pass",
+    "number_of_comparison_results": 1,
+    "aggregate_function": "avg"
+  },
   "objectives": [
     {
-      "sli": "process_cpu",
+      "sli": "Bounce rate_APPLICATION-7F6ACE5C74505040",
       "pass": [
         {
-          "criteria": [
-            "\u003c100ms",
-            "\u003c100ms"
-          ]
+          "criteria": []
         }
       ],
       "warning": [
         {
-          "criteria": [
-            "\u003c+20%",
-            "\u003c+20%"
-          ]
+          "criteria": []
         }
       ],
       "weight": 1,
       "key_sli": false
     },
     {
-      "sli": "teststep_rt_invoke",
+      "sli": "Bounce_rate_APPLICATION-A038082C12D23042",
       "pass": [
         {
-          "criteria": [
-            "\u003c100ms",
-            "\u003c100ms"
-          ]
+          "criteria": []
         }
       ],
       "warning": [
         {
-          "criteria": [
-            "\u003c+20%",
-            "\u003c+20%"
-          ]
+          "criteria": []
         }
       ],
       "weight": 1,
       "key_sli": false
     },
     {
-      "sli": "teststep_rt_version",
+      "sli": "Bounce_rate_APPLICATION-008569CDB300AE03",
       "pass": [
         {
-          "criteria": [
-            "\u003c100ms",
-            "\u003c100ms"
-          ]
+          "criteria": []
         }
       ],
       "warning": [
         {
-          "criteria": [
-            "\u003c+20%",
-            "\u003c+20%"
-          ]
+          "criteria": []
         }
       ],
       "weight": 1,
       "key_sli": false
     },
     {
-      "sli": "teststep_rt_homepage",
+      "sli": "Bounce_rate_APPLICATION-7324C7EE41CC3273",
       "pass": [
         {
-          "criteria": [
-            "\u003c100ms",
-            "\u003c100ms"
-          ]
+          "criteria": []
         }
       ],
       "warning": [
         {
-          "criteria": [
-            "\u003c+20%",
-            "\u003c+20%"
-          ]
+          "criteria": []
         }
       ],
       "weight": 1,
       "key_sli": false
     },
     {
-      "sli": "teststep_rt_Basic Check",
+      "sli": "Bounce_rate_APPLICATION-FDF1A182E95E9E3D",
       "pass": [
         {
-          "criteria": [
-            "\u003c100ms",
-            "\u003c100ms"
-          ]
+          "criteria": []
         }
       ],
       "warning": [
         {
-          "criteria": [
-            "\u003c+20%",
-            "\u003c+20%"
-          ]
+          "criteria": []
         }
       ],
       "weight": 1,
       "key_sli": false
     },
     {
-      "sli": "teststep_rt_echo",
+      "sli": "Bounce_rate_APPLICATION-91A869F0065D216E",
       "pass": [
         {
-          "criteria": [
-            "\u003c100ms",
-            "\u003c100ms"
-          ]
+          "criteria": []
         }
       ],
       "warning": [
         {
-          "criteria": [
-            "\u003c+20%",
-            "\u003c+20%"
-          ]
+          "criteria": []
+        }
+      ],
+      "weight": 1,
+      "key_sli": false
+    },
+    {
+      "sli": "Bounce_rate_APPLICATION-08EBD5603755FA87",
+      "pass": [
+        {
+          "criteria": []
+        }
+      ],
+      "warning": [
+        {
+          "criteria": []
+        }
+      ],
+      "weight": 1,
+      "key_sli": false
+    },
+    {
+      "sli": "Bounce_rate_APPLICATION-E9D5A48C66B161DE",
+      "pass": [
+        {
+          "criteria": []
+        }
+      ],
+      "warning": [
+        {
+          "criteria": []
+        }
+      ],
+      "weight": 1,
+      "key_sli": false
+    },
+    {
+      "sli": "Bounce_rate_APPLICATION-971518AA470E6C1E",
+      "pass": [
+        {
+          "criteria": []
+        }
+      ],
+      "warning": [
+        {
+          "criteria": []
+        }
+      ],
+      "weight": 1,
+      "key_sli": false
+    },
+    {
+      "sli": "Bounce_rate_APPLICATION-A2F08A39C7C23041",
+      "pass": [
+        {
+          "criteria": []
+        }
+      ],
+      "warning": [
+        {
+          "criteria": []
+        }
+      ],
+      "weight": 1,
+      "key_sli": false
+    },
+    {
+      "sli": "Actions per Session \u0026 Session Duration_APPLICATION-91A869F0065D216E_Real users",
+      "pass": [
+        {
+          "criteria": []
+        }
+      ],
+      "warning": [
+        {
+          "criteria": []
+        }
+      ],
+      "weight": 1,
+      "key_sli": false
+    },
+    {
+      "sli": "Actions_per_Session_\u0026_Session_Duration_APPLICATION-08EBD5603755FA87_Real users",
+      "pass": [
+        {
+          "criteria": []
+        }
+      ],
+      "warning": [
+        {
+          "criteria": []
+        }
+      ],
+      "weight": 1,
+      "key_sli": false
+    },
+    {
+      "sli": "Actions_per_Session_\u0026_Session_Duration_APPLICATION-7F6ACE5C74505040_Real users",
+      "pass": [
+        {
+          "criteria": []
+        }
+      ],
+      "warning": [
+        {
+          "criteria": []
+        }
+      ],
+      "weight": 1,
+      "key_sli": false
+    },
+    {
+      "sli": "Actions_per_Session_\u0026_Session_Duration_APPLICATION-FDF1A182E95E9E3D_Real users",
+      "pass": [
+        {
+          "criteria": []
+        }
+      ],
+      "warning": [
+        {
+          "criteria": []
+        }
+      ],
+      "weight": 1,
+      "key_sli": false
+    },
+    {
+      "sli": "Actions_per_Session_\u0026_Session_Duration_APPLICATION-7324C7EE41CC3273_Real users",
+      "pass": [
+        {
+          "criteria": []
+        }
+      ],
+      "warning": [
+        {
+          "criteria": []
+        }
+      ],
+      "weight": 1,
+      "key_sli": false
+    },
+    {
+      "sli": "Actions_per_Session_\u0026_Session_Duration_APPLICATION-008569CDB300AE03_Real users",
+      "pass": [
+        {
+          "criteria": []
+        }
+      ],
+      "warning": [
+        {
+          "criteria": []
+        }
+      ],
+      "weight": 1,
+      "key_sli": false
+    },
+    {
+      "sli": "Actions_per_Session_\u0026_Session_Duration_APPLICATION-930AE48168C2E70B_Real users",
+      "pass": [
+        {
+          "criteria": []
+        }
+      ],
+      "warning": [
+        {
+          "criteria": []
+        }
+      ],
+      "weight": 1,
+      "key_sli": false
+    },
+    {
+      "sli": "Actions_per_Session_\u0026_Session_Duration_APPLICATION-E9D5A48C66B161DE_Real users",
+      "pass": [
+        {
+          "criteria": []
+        }
+      ],
+      "warning": [
+        {
+          "criteria": []
+        }
+      ],
+      "weight": 1,
+      "key_sli": false
+    },
+    {
+      "sli": "Actions_per_Session_\u0026_Session_Duration_APPLICATION-971518AA470E6C1E_Real users",
+      "pass": [
+        {
+          "criteria": []
+        }
+      ],
+      "warning": [
+        {
+          "criteria": []
+        }
+      ],
+      "weight": 1,
+      "key_sli": false
+    },
+    {
+      "sli": "Actions_per_Session_\u0026_Session_Duration_APPLICATION-A038082C12D23042_Real users",
+      "pass": [
+        {
+          "criteria": []
+        }
+      ],
+      "warning": [
+        {
+          "criteria": []
+        }
+      ],
+      "weight": 1,
+      "key_sli": false
+    },
+    {
+      "sli": "Actions_per_Session_\u0026_Session_Duration_APPLICATION-91A869F0065D216E_Real users",
+      "pass": [
+        {
+          "criteria": []
+        }
+      ],
+      "warning": [
+        {
+          "criteria": []
+        }
+      ],
+      "weight": 1,
+      "key_sli": false
+    },
+    {
+      "sli": "Actions_per_Session_\u0026_Session_Duration_APPLICATION-08EBD5603755FA87_Real users",
+      "pass": [
+        {
+          "criteria": []
+        }
+      ],
+      "warning": [
+        {
+          "criteria": []
+        }
+      ],
+      "weight": 1,
+      "key_sli": false
+    },
+    {
+      "sli": "Actions_per_Session_\u0026_Session_Duration_APPLICATION-7F6ACE5C74505040_Real users",
+      "pass": [
+        {
+          "criteria": []
+        }
+      ],
+      "warning": [
+        {
+          "criteria": []
+        }
+      ],
+      "weight": 1,
+      "key_sli": false
+    },
+    {
+      "sli": "Actions_per_Session_\u0026_Session_Duration_APPLICATION-FDF1A182E95E9E3D_Real users",
+      "pass": [
+        {
+          "criteria": []
+        }
+      ],
+      "warning": [
+        {
+          "criteria": []
+        }
+      ],
+      "weight": 1,
+      "key_sli": false
+    },
+    {
+      "sli": "Actions_per_Session_\u0026_Session_Duration_APPLICATION-7324C7EE41CC3273_Real users",
+      "pass": [
+        {
+          "criteria": []
+        }
+      ],
+      "warning": [
+        {
+          "criteria": []
+        }
+      ],
+      "weight": 1,
+      "key_sli": false
+    },
+    {
+      "sli": "Actions_per_Session_\u0026_Session_Duration_APPLICATION-008569CDB300AE03_Real users",
+      "pass": [
+        {
+          "criteria": []
+        }
+      ],
+      "warning": [
+        {
+          "criteria": []
+        }
+      ],
+      "weight": 1,
+      "key_sli": false
+    },
+    {
+      "sli": "Actions_per_Session_\u0026_Session_Duration_APPLICATION-930AE48168C2E70B_Real users",
+      "pass": [
+        {
+          "criteria": []
+        }
+      ],
+      "warning": [
+        {
+          "criteria": []
+        }
+      ],
+      "weight": 1,
+      "key_sli": false
+    },
+    {
+      "sli": "Actions_per_Session_\u0026_Session_Duration_APPLICATION-E9D5A48C66B161DE_Real users",
+      "pass": [
+        {
+          "criteria": []
+        }
+      ],
+      "warning": [
+        {
+          "criteria": []
+        }
+      ],
+      "weight": 1,
+      "key_sli": false
+    },
+    {
+      "sli": "Actions_per_Session_\u0026_Session_Duration_APPLICATION-971518AA470E6C1E_Real users",
+      "pass": [
+        {
+          "criteria": []
+        }
+      ],
+      "warning": [
+        {
+          "criteria": []
+        }
+      ],
+      "weight": 1,
+      "key_sli": false
+    },
+    {
+      "sli": "Actions_per_Session_\u0026_Session_Duration_APPLICATION-A038082C12D23042_Real users",
+      "pass": [
+        {
+          "criteria": []
+        }
+      ],
+      "warning": [
+        {
+          "criteria": []
         }
       ],
       "weight": 1,
