Feature SLI & SLO From Dynatrace Dashboard (#62)
* initial change commit - current compile errors due to kubeapi

* removed kubernetes-utils dependency

* committing my local changes

* first commit that functionally works

* fixing build & test errors

* Removed outdated tests

* Update of go-utils to v0.7.0

* Update of Readme

* Fixing json to yaml and adding more samples

Co-authored-by: Florian Bacher <florian.bacher@dynatrace.com>
Co-authored-by: Johannes <johannes.braeuer@dynatrace.com>

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,10 @@ dynatrace-sli-service
 vendor
 
 dynatrace-sli-service
+test-events/get-sli-dynalive.http
+slo.yaml
+dynatrace/sli.yaml
+sliresult.yaml
+slo.yaml
+dynatrace/sli.yaml
+dynatrace/dashboard.json
